Avoid missing scrollbars.
Closes #621

--- a/privacyidea/static/css/signin.css
+++ b/privacyidea/static/css/signin.css
@@ -66,9 +66,7 @@ body {
 }
 
 .lock-dialog {
-   background: #333333;
-   opacity: .30;
-   filter: Alpha(Opacity=30);
+   background-color: rgba(0, 0, 0, 0.8);
 }
 
 /* User Add
